[package]
name = "virtual_virtio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.28"
futures-core = "0.3.28"
packed_struct = "0.10.1"
pin-project = "1.1.3"
ratatui = { version = "0.23.0", features = ["all-widgets"] }
tokio = { version = "1.32.0", features = ["sync", "rt", "time", "macros"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
